Bug 303387 - kwin shows artifacts after switching tasks
Summary: kwin shows artifacts after switching tasks
Status: CLOSED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-tabbox (other bugs)
Version First Reported In: 4.8.97
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-11 20:28 UTC by Andre Woebbeking
Modified: 2012-10-27 08:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments
snapshot 1 (45.93 KB, image/png)
2012-07-11 20:39 UTC, Andre Woebbeking
Details
snapshot 2 (18.53 KB, image/png)
2012-07-11 20:39 UTC, Andre Woebbeking
Details
Screenshot of 3d gallery switcher with window preview in the background (170.09 KB, image/png)
2012-10-02 18:29 UTC, Gita Benadi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andre Woebbeking 2012-07-11 20:28:07 UTC
When I release the shortcut for switching tasks I've two artifacts:
1) the shadow of the task switcher
2) the task bar (which becomes invisible while switching tasks)

Have a look at the attachments.

Not sure whether it's related or not but while I'm switching desktops the clock in the task bar is blurred.

Reproducible: Always
Comment 1 Andre Woebbeking 2012-07-11 20:39:06 UTC
Created attachment 72462 [details]
snapshot 1
Comment 2 Andre Woebbeking 2012-07-11 20:39:34 UTC
Created attachment 72463 [details]
snapshot 2
Comment 3 Andre Woebbeking 2012-07-11 20:42:46 UTC
For additional information about hardware or used effects have a look at https://bugs.kde.org/show_bug.cgi?id=303331
Comment 4 Thomas Lübking 2012-07-11 20:48:41 UTC
Is that what you actually see in the large screenshot or did you gray out regions for privacy reasons?

Also please cross-check with 
a) the xrender backend.
b) the blur effect disabled
Comment 5 Andre Woebbeking 2012-07-11 20:55:52 UTC
Oops, I expected the XRender question and tested it already but I forgot to mention that it has no effect :-)

I only grayed out the desktop background to shrink the snapshot to an uploadable size.

Disabling the blur effect only fixed the blurred clock issue (aka point 3).
Comment 6 Thomas Lübking 2012-07-11 21:26:12 UTC
Ok, so at the end of the day the major issue is that a frame of the switcher reamains on screen?!

a) does the swoitcher type matter?
b) which plasma theme (if it's from kde-look, ideally with a link to the exact one - there's a bazillion "air-dings" ;-)
Comment 7 Andre Woebbeking 2012-07-11 21:57:49 UTC
> Ok, so at the end of the day the major issue is that a frame of the switcher reamains on screen?!

Well and that the task bar becomes invisible.

> a) does the swoitcher type matter?

I tried to changed it but I always get the box switch with (big) thumbnails?!?

> b) which plasma theme (if it's from kde-look, ideally with a link to the exact one - there's a bazillion "air-dings" ;-)

Standard "Slim Glow"
Comment 8 Gita Benadi 2012-10-02 18:26:13 UTC
I have exactly the same issue here with Kubuntu 12.04.1 and KDE 4.9.1. A frame of the switcher remains on screen after releasing the alt+tab keys. If I use the window switcher on a desktop without windows, I also get the partly vanished panel Andre described. Moreover, I cannot change the type of switcher. I am stuck with "window preview". The only other switchers that work are the 3d window gallery and 3d stacked windows, but even then the window preview switcher remains in the background (see attached screenshot).
Comment 9 Gita Benadi 2012-10-02 18:29:03 UTC
Created attachment 74302 [details]
Screenshot of 3d gallery switcher with window preview in the background
Comment 10 Thomas Lübking 2012-10-02 19:13:52 UTC
looks like the BoxSwitch effect is actually configured as tabbox!

kwriteconfig --file kwinrc --group Effect-BoxSwitch --key TabBox false
kwriteconfig --file kwinrc --group Effect-BoxSwitch --key TabBoxAlternative false
qdbus org.kde.kwin /KWin reconfigure
qdbus org.kde.kwin /KWin reconfigureEffect boxswitch



@Martin:
- primaryTabBox = conf.readEntry("TabBox", false);
- secondaryTabBox = conf.readEntry("TabBoxAlternative", false);
+ primaryTabBox = false;
+ secondaryTabBox = false;

yesno?
Comment 11 Martin Flöser 2012-10-03 06:06:29 UTC
(In reply to comment #10)
> @Martin:
> - primaryTabBox = conf.readEntry("TabBox", false);
> - secondaryTabBox = conf.readEntry("TabBoxAlternative", false);
> + primaryTabBox = false;
> + secondaryTabBox = false;
> 
> yesno?
yes!
Comment 12 Thomas Lübking 2012-10-25 17:36:40 UTC
Git commit c09cf68d7f2487e257ab7bf095ff9dca81ae6802 by Thomas Lübking.
Committed on 03/10/2012 at 18:57.
Pushed by luebking into branch 'KDE/4.9'.

Hardcode TabBox setting in boxswitch effect false

Boxswitch is activated as tabbox, possibly due to a downstream issue
This results in multiple effects being assigned to the tabbox and no
GUI way for the user to fix this.
Since the BoxSwitch effects nowadays only exists  as sidearm for
coverswitch, the tabbox setting is now hardcoded and disabled in the
effect, making it completely impossible to accidentally use it as tabbox.
REVIEW: 106695
FIXED-IN: 4.9.3

M  +4    -3    kwin/effects/boxswitch/boxswitch.cpp

http://commits.kde.org/kde-workspace/c09cf68d7f2487e257ab7bf095ff9dca81ae6802
Comment 13 Thomas Lübking 2012-10-25 17:58:10 UTC
Git commit b9dd09ff1921babe32a177822f61615846fd108f by Thomas Lübking.
Committed on 03/10/2012 at 18:57.
Pushed by luebking into branch 'master'.

Hardcode TabBox setting in boxswitch effect false

Boxswitch is activated as tabbox, possibly due to a downstream issue
This results in multiple effects being assigned to the tabbox and no
GUI way for the user to fix this.
Since the BoxSwitch effects nowadays only exists  as sidearm for
coverswitch, the tabbox setting is now hardcoded and disabled in the
effect, making it completely impossible to accidentally use it as tabbox.
REVIEW: 106695
FIXED-IN: 4.9.3

M  +4    -3    kwin/effects/boxswitch/boxswitch.cpp

http://commits.kde.org/kde-workspace/b9dd09ff1921babe32a177822f61615846fd108f
Comment 14 Gita Benadi 2012-10-26 06:59:32 UTC
Great! Thanks a lot for fixing this.
Comment 15 Andre Woebbeking 2012-10-27 08:11:17 UTC
Thanks!